<resources>
    <string name="app_name">Gps-tracker</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Карта</string>
    <string name="map_type_normal">Радиусты алып тастау</string>
    <string name="btnLogOut">Жүйеден шығу</string>
    <string name="btnAbout">Бағдарламаны құрушы</string>
    <string name="btnSettings">Баптаулар</string>
    <string name="btnFindUser">Найти пользователя</string>
    <string name="btnUserRelations">Друзья</string>
</resources>
