<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nurgali.gps_tracker.activity.MapsActivity" >

    <item
        android:id="@+id/removeRadius"
        android:title="@string/map_type_normal"/>
    <item
        android:id="@+id/btnFindUser"
        android:title="@string/btnFindUser"/>
    <item
        android:id="@+id/btnUserRelations"
        android:title="@string/btnUserRelations"/>
    <item
        android:id="@+id/btnSettings"
        android:title="@string/btnSettings"/>
    <item
        android:id="@+id/btnAbout"
        android:title="@string/btnAbout"/>
    <item
        android:id="@+id/btnLogOut"
        android:title="@string/btnLogOut"/>

</menu>